# LightRAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  .windsurfrules  Dockerfile  Dockerfile.base  Enrich_data_long_resume_vinh.py  README.md  book.txt  dataset_crawler-google-places_2024-10-21_14-51-17-086.json  deploy.sh  install_microk8s.md  install_microk8s_lightRAG.md  llm.py  load.py  pyproject.toml  query_lightrag.py  requirements-cpu.txt  requirements.txt  resto copy.txt  resto.txt  setup_uv_env.sh
Reflexions/: flexible_node_attributes_strategy.md  mermaid - query.txt  modelisation_graph.txt  multiInstance_FastAPI.md  neo4j_relationship_labels_strategy.md  user_retention.md
api/: .dockerignore  Dockerfile  README.md  deploy_lightrag.sh  deploy_lightrag_insert.sh  deployment.yaml  lightrag-api-ingress.yaml  lightrag_deployment.yaml  lightrag_insert.py  lightrag_query.py  main.py  requirements.txt
examples/: .env.example  graph_visual_with_html.py  graph_visual_with_neo4j.py  insert_zulli_data.py  knowledge_graph.html  lightrag_azure_openai_demo.py  lightrag_bedrock_demo.py  lightrag_hf_demo.py  lightrag_insert_openai.py  lightrag_ollama_demo.py  lightrag_openai_compatible_demo.py  lightrag_openai_compatible_demo_rabbitmq copy.py  lightrag_openai_compatible_demo_rabbitmq.py  lightrag_openai_demo.py  lightrag_query_openai copy.py  lightrag_query_openai.py  networkX.py  query_lightrag_openai_demo.py  vram_management_demo.py  zulli_info_direct.py
graph_check/: ANALYSE_STOCKAGE_GRAPHE.md  README.md  detailed_graph_problems.json  detailed_graph_problems.py  graph_integrity.py  graph_integrity_check.py  integrity_report.md  ligthrag_query.py
k8s/: lightrag-deployment.yaml  lightrag-ingress.yaml  lightrag-secrets.yaml  lightrag-service.yaml
lightrag/: __init__.py  lightrag copy.py  lightrag.py  llm.py  operate copy 2.py  operate copy.py  operate.py  prompt.py  secu copy.py  secu.py  utils.py
milvus_check/: check_relationships.py
milvus_docker/: README.md  clear_database.py  create_collection.py  custom-milvus-values.yaml  delete_collection.py  docker-compose-attu.yml  docker-compose.yml  duplicate_collection.py  filter_search_milvus.py  get_chunk.py  get_collecttion.py  microk8s-milvus-values.yaml  milvus-deployment.yaml  milvus_correlation_ann.py  show_collection_milvus.py  test_dbmlilvus.py  test_milvus_connection.py
mongodb_docker/: README.md  clear_database.py  docker-compose.yml
neo4j_microk8s/: README.md  clear_database.py  docker-compose.yml  fillter_graph copy 2.py  fillter_graph copy.py  fillter_graph.py  gestion_subGraph.md  namespace_fillter_graph.py  namespace_fillter_graph_copy.py  neo4j_backup.py  neo4j_restore.py  query_cypher.md  query_neo4j.py  (+5 more)
(+203 files in other folders)
