[project]
name = "lightrag"
version = "0.1.0"
description = "A lightweight RAG implementation with RabbitMQ integration"
authors = [
    {name = "Vinh", email = ""}
]
dependencies = [
    "aioboto3>=11.3.0",
    "graspologic>=3.3.0",
    "hnswlib>=0.7.0",
    "nano-vectordb>=0.0.4",
    "networkx>=3.2.1",
    "openai>=1.3.7",
    "pika>=1.3.2",
    "prefect>=2.14.12",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.5.2",
    "xxhash>=3.4.1",
    "pyvis>=0.3.2",
    "python-dotenv>=1.0.0",
    "neo4j>=5.0.0",
    "ollama",
    "transformers>=4.47.0",
    "torch>=2.5.1",
    "oracledb>=2.5.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightrag"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
